RESOLVED FIXED115129
DFG doesn't support to_jsnumber
https://bugs.webkit.org/show_bug.cgi?id=115129
Summary DFG doesn't support to_jsnumber
Oliver Hunt
Reported 2013-04-24 14:43:23 PDT
Currently triggering assertions, not sure if they're just wrong, or if i have other issues
Attachments
patch (3.73 KB, patch)
2013-04-24 14:43 PDT, Oliver Hunt
no flags
the patch (6.86 KB, patch)
2013-04-25 16:29 PDT, Filip Pizlo
ggaren: review+
Oliver Hunt
Comment 1 2013-04-24 14:43:56 PDT
Created attachment 199519 [details] patch May be wrong in ways other than just the incorrect assertion
Filip Pizlo
Comment 2 2013-04-25 16:17:58 PDT
I'm looking at this now.
Filip Pizlo
Comment 3 2013-04-25 16:20:59 PDT
(In reply to comment #0) > Currently triggering assertions, not sure if they're just wrong, or if i have other issues How to repro the assertions?
Filip Pizlo
Comment 4 2013-04-25 16:24:10 PDT
(In reply to comment #3) > (In reply to comment #0) > > Currently triggering assertions, not sure if they're just wrong, or if i have other issues > > How to repro the assertions? Never mind.
Filip Pizlo
Comment 5 2013-04-25 16:29:57 PDT
Created attachment 199763 [details] the patch
WebKit Commit Bot
Comment 6 2013-04-25 16:32:23 PDT
Attachment 199763 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source/JavaScriptCore/dfg/DFGByteCodeParser.cpp', u'Source/JavaScriptCore/dfg/DFGCapabilities.h', u'Source/JavaScriptCore/dfg/DFGFixupPhase.cpp', u'Source/JavaScriptCore/dfg/DFGNodeFlags.h', u'Source/JavaScriptCore/dfg/DFGNodeType.h', u'Source/JavaScriptCore/dfg/DFGPredictionPropagationPhase.cpp']" exit_code: 1 Source/JavaScriptCore/dfg/DFGFixupPhase.cpp:798: A case label should not be indented, but line up with its switch statement. [whitespace/indent] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 7 2013-04-25 16:39:50 PDT
Geoffrey Garen
Comment 8 2013-04-25 16:55:56 PDT
Comment on attachment 199763 [details] the patch r=me
Filip Pizlo
Comment 9 2013-04-25 18:17:25 PDT
Note You need to log in before you can comment on or make changes to this bug.