Source/JavaScriptCore/dfg/DFGPredictionPropagationPhase.cpp
@@ -473,7 +473,6 @@ private:
         case CheckArray:
         case Arrayify:
         case ArrayifyToStructure:
-        case Identity:
         case MovHint:
         case MovHintAndCheck:
         case ZombieHint: {
@@ -491,6 +490,10 @@ private:
 
         case GetScope:
             changed |= setPrediction(SpecCellOther);
+            break;
+
+        case Identity:
+            changed |= mergePrediction(node->child1()->prediction());
             break;
 
 #ifndef NDEBUG
